# winerosetta

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: loader.cpp  winerosetta.cpp
